@@ -5,7 +5,10 @@ http://s.apache.org/luceneversions
 
 ======================= Lucene 4.10.0 ======================
 
-(No Changes)
+Optimizations
+
+LUCENE-5780: Make OrdinalMap more memory-efficient, especially in case the
+first segment has all values. (Adrien Grand, Robert Muir)
 
 ======================= Lucene 4.9.0 =======================
 
